--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -10,7 +10,7 @@
         <label for="password">Password</label>
         <input type="password" id="password" [(ngModel)]="password" name="password" required>
       </div>
-      <button type="submit">Login</button>
+      <button [disabled] = "!enableLoginBtn()" type="submit">Login</button>
     </form>
     <button mat-button  [routerLink]="['/register']">sign-in</button>
   </div>
