--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="main-container">
 <div class="form-container" >
     <form (submit)="login()">
       <h3>Login</h3>
@@ -14,4 +14,4 @@
     </form>
     <button mat-button  [routerLink]="['/register']">sign-in</button>
   </div>
-</body>
+</div>
