--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -1,16 +1,17 @@
-body, html {
+main-container {
     height: 100%;
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #d1aaaa;
+    background-color: #ea9e9e;
   }
   
   .form-container {
     width: 100%;
     max-width: 400px;
     padding: 20px;
+    background-color: #dfc3c3;
     border: 1px solid #0f0b0b;
     border-radius: 4px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
