--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -12,6 +12,6 @@
       </div>
       <button [disabled] = "!enableLoginBtn()" type="submit">Login</button>
     </form>
-    <button mat-button  [routerLink]="['/register']">sign-in</button>
+    Not a member? <a href="/register">Signup now</a>
   </div>
 </div>
