--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -12,6 +12,6 @@
       </div>
       <button [disabled]="!enableRegisterBtn()" type="submit">Register</button>
     </form>
-    <button mat-button [routerLink]="['/login']">login</button>
+    Already have an accound? <a href="/login">Login now</a>
   </div>
 </div>
