--- a/src/app/task/task-create/task-create.component.css
+++ b/src/app/task/task-create/task-create.component.css
@@ -1,8 +1,23 @@
 form {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-width: 400px;
+    padding: 20px;
+    background-color: #f4eded;
+    border: 1px solid #0f0b0b;
+    border-radius: 4px;
+    box-shadow: 0 2px 10px rgba(78, 68, 68, 0.1);
   }
   
   mat-form-field, mat-checkbox, button {
     margin-bottom: 15px;
+  }
+  .main-container {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f3eeee;
   }
