--- a/src/app/task/task-create/task-create.component.html
+++ b/src/app/task/task-create/task-create.component.html
@@ -1,4 +1,5 @@
-<form [formGroup]="createTaskForm" (ngSubmit)="onSubmit()">
+<div  class="main-container">
+  <form [formGroup]="createTaskForm" (ngSubmit)="onSubmit()">
     <mat-form-field appearance="fill">
       <mat-label>Task Name</mat-label>
       <input matInput formControlName="title" required>
@@ -38,4 +39,6 @@
   
     <button mat-raised-button color="primary" type="submit">Create Task</button>
   </form>
+</div>
+
   
